# physics-sim

./: .gitignore  CMakeLists.txt  LICENSE  README  imgui.ini
include/data/: CSVLogger.hpp  State.hpp
include/gui/: ElectricPanel.hpp  OrbitPanel.hpp  ProjectilePanel.hpp  SpringPanel.hpp  StatePanel.hpp
include/physics/: Electric.hpp  Field.hpp  Force.hpp  Integrator.hpp  Orbit.hpp  Particle.hpp  PhysicsBody.hpp  Spring.hpp  State.hpp
scripts/: projectile.ipynb
src/: main.cpp
src/data/: CSVLogger.cpp
src/gui/: ElectricPanel.cpp  OrbitPanel.cpp  ProjectilePanel.cpp  SpringPanel.cpp  StatePanel.cpp
src/physics/: Electric.cpp  Field.cpp  Integrator.cpp  Orbit.cpp  Particle.cpp  Spring.cpp
